--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,9 @@
   "files.associations": {
     "iosfwd": "cpp",
     "string": "cpp",
-    "stdexcept": "cpp"
+    "stdexcept": "cpp",
+    "fstream": "cpp",
+    "iostream": "cpp"
   },
   "C_Cpp.errorSquiggles": "disabled",
   "C_Cpp_Runner.cCompilerPath": "gcc",
